# pagefind

./: .dockerignore  .gitignore  CHANGELOG.md  justfile
.backstage/: changelog.cjs  create_package.cjs  set_version.cjs
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  dependabot.yml  deploy-docs.yml  release.yml  test.yml
docs/: Caddyfile  Dockerfile  Dockerfile.prebuilt  fly.prod.toml  fly.toml  go.mod  hugo.toml  package-lock.json  package.json  redirects
docs/content/: _index.md
pagefind/: Cargo.toml
pagefind/integration_tests/_macros/: gate_result_loading.toolproof.macro.yml
pagefind/integration_tests/anchors/: pagefind-returns-plain-excerpts-for-subresults.toolproof.yml
pagefind/integration_tests/base/: default-ui-detection-modular-ui.toolproof.yml  default-ui-detection-no-ui.toolproof.yml  default-ui-detection.toolproof.yml  default-ui-non-detection.toolproof.yml
pagefind/integration_tests/metadata/: search-results-return-plain-search-excerpt.toolproof.yml
pagefind/integration_tests/search_options/: meta-cache-tag-can-be-configured.toolproof.yml
pagefind/integration_tests/urls/: subresult-url-uses-meta-override.toolproof.yml
pagefind/integration_tests/web_components/: config-exact-diacritics.toolproof.yml  config-highlight-param.toolproof.yml  config-meta-cache-tag.toolproof.yml  custom-templates.toolproof.yml  keyboard-shortcuts.toolproof.yml  missing-fields.toolproof.yml  modal-escape.toolproof.yml  modal-trigger-attributes.toolproof.yml  multiple-instances-config-isolation.toolproof.yml  relative-image-urls.toolproof.yml  results-keyboard-preloading.toolproof.yml  searchbox-css-border-focus-variable.toolproof.yml  searchbox-css-font-variable.toolproof.yml  searchbox-custom-placeholder-template.toolproof.yml  searchbox-custom-templates.toolproof.yml  searchbox-escape-cancels-pending.toolproof.yml  searchbox-loading-announcement.toolproof.yml  searchbox-placeholder-accessibility.toolproof.yml  searchbox-queue-collapse.toolproof.yml  searchbox-skeleton-blocking.toolproof.yml  searchbox-stale-result-callback.toolproof.yml  searchbox-subresult-activation.toolproof.yml  searchbox-subresult-keyboard.toolproof.yml  searchbox-subresult-mouse.toolproof.yml  sub-results-custom-template.toolproof.yml  summary.toolproof.yml
pagefind/src/: lib.rs  logging.rs  runner.rs
pagefind/src/fossick/: mod.rs  parser.rs  splitting.rs
pagefind/src/service/: api.rs
pagefind_playground/: _build_common.js  package-lock.json  package.json  tsconfig.json
pagefind_stem/: Cargo.toml  build.js
pagefind_stem/src/: lib.rs
pagefind_stem/src/snowball/algorithms/: arabic.rs  basque.rs  catalan.rs  danish.rs  dutch.rs  dutch_porter.rs  english.rs  esperanto.rs  estonian.rs  finnish.rs  french.rs  german.rs  greek.rs  hindi.rs  hungarian.rs  indonesian.rs  irish.rs  italian.rs  lithuanian.rs  lovins.rs  mod.rs  nepali.rs  norwegian.rs  polish.rs  porter.rs  romanian.rs  russian.rs  serbian.rs  spanish.rs  swedish.rs  tamil.rs  turkish.rs  yiddish.rs
pagefind_web/: Cargo.toml  local_build.sh
pagefind_web_js/: package-lock.json  package.json
(+135 files in other folders)
