[package]
name = "pagefind"
version = "0.0.0"
edition = "2021"
include = ["/src", "/vendor", "/features", "/tests"]
description = "Implement search on any static website."
license = "MIT"
repository = "https://github.com/Pagefind/pagefind"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
console = "0.16.3"
wax = "0.7.0"
futures = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "time",
    "macros",
    "sync",
] }
pagefind_stem = { version = "1.0.0", features = [
    "arabic",
    "armenian",
    "basque",
    "catalan",
    "danish",
    "dutch",
    "english",
    "esperanto",
    "estonian",
    "finnish",
    "french",
    "german",
    "greek",
    "hindi",
    "hungarian",
    "indonesian",
    "irish",
    "italian",
    "lithuanian",
    "nepali",
    "norwegian",
    "polish",
    "portuguese",
    "romanian",
    "russian",
    "serbian",
    "spanish",
    "swedish",
    "tamil",
    "turkish",
    "yiddish",
] }
convert_case = "0.11.0"
charabia = { version = "0.9.3", optional = true, default-features = false, features = [
    "chinese",
    "japanese",
    "thai",
] }
unicode-segmentation = "1.10.1"
unicode-normalization = "0.1"
emojis = "0.8.0"
hashbrown = { version = "0.16.1", features = ["serde"] }
either = "1.9.0"
regex = "1.1"
minicbor = { version = "2.1.1", features = ["alloc", "derive"] }
base64 = "0.22"
lol_html = "2.7"
html-escape = "0.2.11"
bit-set = "0.10"
flate2 = "1.0"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
minifier = "0.3.6"
sha-1 = "0.10"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
include_dir = "0.7.2"
twelf = { version = "0.15", default-features = false, features = [
    "env",
    "clap",
    "json",
    "yaml",
    "toml",
] }
portpicker = { version = "0.1", optional = true }
actix-web = { version = "4", optional = true }
actix-files = { version = "0.6", optional = true }
lexical-core = "1.0.0"
path-slash = "0.2"
rayon = "1.10"
rust-patch = "0.1.3"
typed-builder = "0.23.2"

[features]
default = ["serve"]
extended = ["dep:charabia"]
serve = ["dep:actix-web", "dep:actix-files", "dep:portpicker"]
