[package]
name = "pagefind_stem"
version = "1.0.0"
# Imports would have to change for a newer edition,
# and I don't want to have to edit snowball's rust files
edition = "2015"
description = "Snowball stemming algorithms repackaged for Rust, with languages behind feature flags."
license = "MIT"

[dependencies]

[features]
arabic = []
armenian = []
basque = []
catalan = []
danish = []
dutch = []
dutch_porter = []
english = []
esperanto = []
estonian = []
finnish = []
french = []
german = []
greek = []
hindi = []
hungarian = []
indonesian = []
irish = []
italian = []
lithuanian = []
lovins = []
nepali = []
norwegian = []
polish = []
porter = []
portuguese = []
romanian = []
russian = []
serbian = []
spanish = []
swedish = []
tamil = []
turkish = []
yiddish = []
